--- a/src/main/resources/templates/companyDetails.html
+++ b/src/main/resources/templates/companyDetails.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/baseLayout}">
 <head>
-    <title>View Correspondence</title>
+    <title>Company Details</title>
 </head>
 
 <body>
@@ -15,15 +15,10 @@
             <form id="correspondence-form" class="form" th:action="@{''}" method="post">
                 <header>
                     <h1 id="page-title" class="govuk-heading-l">
-                        View Correspondence
+                        Company Details
                     </h1>
                 </header>
-                <a role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
-                    Start now
-                    <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
-                        <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-                    </svg>
-                </a>
+
             </form>
         </div>
     </div>
