--- a/src/main/resources/templates/viewCorrespondence.html
+++ b/src/main/resources/templates/viewCorrespondence.html
@@ -15,7 +15,7 @@
             <form id="correspondence-form" class="form" th:action="@{''}" method="post">
                 <header>
                     <h1 id="page-title" class="govuk-heading-l">
-                        View Correspondence
+                        View correspondence
                     </h1>
                 </header>
                 <button draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
