--- a/src/main/resources/templates/companyDetails.html
+++ b/src/main/resources/templates/companyDetails.html
@@ -18,12 +18,6 @@
                         Confirm this is the correct company
                     </h1>
                 </header>
-                <button draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
-                        Confirm and continue
-                        <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
-                            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-                        </svg>
-                </button>
 
                 <dl class="app-check-your-answers app-check-your-answers--short">
                     <div class="app-check-your-answers__contents">
@@ -80,6 +74,7 @@
                         </dd>
                     </div>
                 </dl>
+                <input id="next-button" class="govuk-button" type="submit" role="button" value="Continue"/>                
             </form>
         </div>
     </div>
