--- a/src/main/resources/templates/layouts/baseLayout.html
+++ b/src/main/resources/templates/layouts/baseLayout.html
@@ -26,6 +26,7 @@
         <div th:replace="fragments/header :: header"></div>
         <div class="govuk-width-container">
             <div th:replace="fragments/betaBanner :: betaBanner"></div>
+            <div th:replace="fragments/userBar :: userBar"></div>
             <main id="content" role="main" class="govuk-main-wrapper">
                 <div layout:fragment="content"></div>
             </main>
