Update tab title

--- a/src/main/resources/templates/listCompanyDocuments.html
+++ b/src/main/resources/templates/listCompanyDocuments.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/baseLayout}">
 <head>
-    <title>Company documents</title>
+    <title>View correspondence</title>
 </head>
 
 <body>
