Update tab titles to match prototype

--- a/src/main/resources/templates/viewCorrespondence.html
+++ b/src/main/resources/templates/viewCorrespondence.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/baseLayout}">
 <head>
-    <title>View Correspondence</title>
+    <title>View company correspondence</title>
 </head>
 
 <body>
