--- a/src/main/resources/templates/companyDetails.html
+++ b/src/main/resources/templates/companyDetails.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/baseLayout}">
 <head>
-    <title>Company Details</title>
+    <title>Confirm this is the correct company</title>
 </head>
 
 <body>
